# pico-actuator

./: .coveragerc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  codeql.yml  docs.yml
docs/: CHANGELOG.md  LEARN.md  architecture.md  examples.md  faq.md  getting-started.md  index.md  llms.txt  requirements.txt  skills.md  troubleshooting.md
docs/adr/: README.md  adr-0001-reuse-pico-fastapi-controllers.md  adr-0002-protocols-over-registry.md  adr-0003-failure-isolation.md  adr-0004-dependency-free-liveness.md  adr-0005-concurrent-checks-with-timeout.md
docs/cookbook/: README.md  pattern-cached-check.md  pattern-database-indicator.md  pattern-securing-endpoints.md
docs/how-to/: index.md  kubernetes-probes.md  testing.md
docs/reference/: config.md  index.md
docs/user-guide/: index.md
examples/minimal/: application.yaml
examples/minimal/myapp/: controllers.py  health.py  main.py
src/pico_actuator/: __init__.py  config.py  controller.py  exceptions.py  health.py
tests/: conftest.py  test_anonymous_probes.py  test_endpoints.py  test_health.py
