[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-actuator"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "Spring Boot-style actuator for the Pico ecosystem: /health, /info, /metrics over pico-fastapi."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["ioc", "di", "actuator", "health", "fastapi", "spring boot", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pico-ioc >= 2.3.0",
    "pico-fastapi >= 0.2.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client"]
dev = ["pytest>=8", "pytest-asyncio", "pytest-cov>=5", "httpx", "pico-boot", "ruff"]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-actuator"
Documentation = "https://dperezcabrera.github.io/pico-actuator/"
Repository = "https://github.com/dperezcabrera/pico-actuator"
Changelog = "https://github.com/dperezcabrera/pico-actuator/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-actuator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_actuator*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.1.0"
write_to = "src/pico_actuator/_version.py"
write_to_template = "__version__ = '{version}'\n"

# Auto-discovered by pico-boot, same mechanism as pico-fastapi.
[project.entry-points."pico_boot.modules"]
pico_actuator = "pico_actuator"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "C901", "PLR1702"]
ignore = ["E501", "E701", "E731", "F401", "F811", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"
